fixed alignments

--- a/CSS/innovateDesign.css
+++ b/CSS/innovateDesign.css
@@ -38,7 +38,7 @@ body
 {
     position: absolute;
     top: 13%;
-    left: 43.5%;
+    left: 42%;
     color: #fff;
     font-size: 24px;
     font-family: 'Josefin Sans', sans-serif;
